--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Ash</h1>
+        <h1><img src="./assets/logo.png" align="center" style="width:75px;" alt="ash logo"> Ash</h1>
         <p>A modern terminal text editor</p>
 
         <p class="view"><a href="https://github.com/akashnag/ash">View the Project on GitHub <small>akashnag/ash</small></a></p>
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-        <p><img src="./assets/banner.png" alt="ash logo"></p>
+        <p><img src="./assets/banner.png" alt="ash banner"></p>
 <p><a href="https://github.com/akashnag/ash/blob/master/LICENSE.md"><img src="https://img.shields.io/badge/license-MIT-blue.svg" alt="MIT License"></a> <img src="https://img.shields.io/github/downloads/akashnag/ash/total" alt="Downloads"></p>
 <p><strong>ash</strong> is a simple and clean terminal-based text editor, that aims to be easy to use with modern key-bindings. It is capable of handling multiple files simultaneously and has a wide array of modern features. Here is a picture of <strong>ash</strong> editing this README file:</p>
 <p><img src="./assets/ash-default.png" alt="Screenshot"></p>
