--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="https://github.com/akashnag/ash/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/akashnag/ash/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/akashnag/ash">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/akashnag/ash/releases/download/ash-0.1.0-dev/ash-0.1.0.dev0.tar.gz">Download <strong>Latest Release</strong></a></li>
         </ul>
       </header>
       <section>
