--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="google-site-verification" content="SMJhIj6fTou-8GBQUk9WNLTQZWpXmn5BiTWVYu33rIU"/>
+    
     <title>ash: a modern terminal text-editor</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
