--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <p>A modern terminal text editor</p>
 
         <p class="view"><a href="https://github.com/akashnag/ash">View the Project on GitHub <small>akashnag/ash</small></a></p>
-
-
+        
         <ul>
           <li><a href="https://github.com/akashnag/ash/releases/download/ash-0.1.0-dev/ash-0.1.0.dev0.tar.gz">v0.1.0-dev<strong>Download</strong></a></li>
           <li><a href="https://github.com/akashnag/ash/zipball/master">Download (ZIP)<strong>Source</strong></a></li>
@@ -44,6 +43,7 @@
   <ul>
     <li><a href="#prerequisites">Prerequisites</a></li>
     <li><a href="#installing-ash">Installing ash</a></li>
+    <li><a href="#uninstalling-ash">Uninstalling ash</a></li>
   </ul></li>
 <li><a href="#colors">Colors</a></li>
 <li><a href="#usage">Usage</a></li>
