--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 					<li><a href="https://github.com/akashnag/ash/raw/master/dist/ash-editor-0.1.0.dev2.tar.gz">Nightly build<strong>Download</strong></a></li>
 					<li><a href="https://github.com/akashnag/ash/zipball/master">Download (ZIP)<strong>Source</strong></a></li>          
 				</ul>
+
+				<div class="highlight highlight-source-shell">
+					<strong>Installation:</strong><br/><br/>
+					<pre>$ sudo pip3 install ash-editor</pre>
+				</div>
 			</header>
 	  
 			<section>
@@ -99,7 +104,7 @@ $ sudo apt install python3-pip
 
 				<div class="highlight highlight-source-shell">
 <pre>
-$ sudo pip3 install <span class="pl-c1">.</span>
+$ sudo pip3 install ash-editor
 </pre>
 				</div>
 
@@ -110,7 +115,7 @@ $ sudo pip3 install <span class="pl-c1">.</span>
 
 				<div class="highlight highlight-source-shell">
 <pre>
-$ sudo pip3 uninstall ash
+$ sudo pip3 uninstall ash-editor
 </pre>
 				</div>
 
