Added git integration

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
 				<ul>
 					<li><a href="https://github.com/akashnag/ash/releases/download/ash-0.1.0-dev/ash-0.1.0.dev0.tar.gz">Stable release<strong>Download</strong></a></li>
-					<li><a href="https://github.com/akashnag/ash/raw/master/dist/ash-editor-0.1.0.dev2.tar.gz">Nightly build<strong>Download</strong></a></li>
+					<li><a href="https://github.com/akashnag/ash/raw/master/dist/ash-editor-0.1.0.dev4.tar.gz">Nightly build<strong>Download</strong></a></li>
 					<li><a href="https://github.com/akashnag/ash/zipball/master">Download (ZIP)<strong>Source</strong></a></li>          
 				</ul>
 
@@ -83,6 +83,7 @@
 					<li>Syntax highlighting (partially implemented)</li>
 					<li>Selection highlighting (highlights text under selection wherever they occur in the document)</li>
 					<li>Color scheme customization</li>
+					<li>Git integration</li>
 				</ul>
 
 				<h2><a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
@@ -123,7 +124,7 @@ $ sudo pip3 uninstall ash-editor
 				<p>Since <strong>ash</strong> is still under development, prebuilt binaries are not yet available. You can use PyInstaller or similar tools to build one for your system.</p>
 				
 				<h2><a id="colors" class="anchor" href="#colors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Colors</h2>
-				<p>If you are using the default Ubuntu terminal, to enable 256 make sure your <code>TERM</code> variable is set to <code>xterm-256color</code>. After <strong>ash</strong> runs for the first time, it creates a <code>.ashrc</code> file inside your home directory. You can edit that file directly to change how <strong>ash</strong> looks on your system. The RGB triplets listed in that file range from 0--255. If you want to reset <strong>ash</strong> to its default colors, delete the configuration file using: <code>rm ~/.ashrc</code>.</p>
+				<p>If you are using the default Ubuntu terminal, to enable 256 make sure your <code>TERM</code> variable is set to <code>xterm-256color</code>. After <strong>ash</strong> runs for the first time, it creates a <code>.ashedrc</code> file inside your home directory. You can edit that file directly to change how <strong>ash</strong> looks on your system. The RGB triplets listed in that file range from 0--255. If you want to reset <strong>ash</strong> to its default colors, delete the configuration file using: <code>rm ~/.ashedrc</code>.</p>
 
 				<h2><a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
 				<p>Once you have downloaded the <strong>ash</strong> source code, and set it up as detailed above, you are ready to use it.</p>
