--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 	  
 			<section>
 				<p><img src="./assets/banner.png" alt="ash banner"></p>
-				<p><a href="https://github.com/akashnag/ash/blob/master/LICENSE.md"><img src="https://img.shields.io/badge/license-MIT-blue.svg" alt="MIT License"></a> <img src="https://img.shields.io/github/downloads/akashnag/ash/total" alt="Downloads"></p>
+				<p>
+					<a href="https://github.com/akashnag/ash/blob/master/LICENSE.md"><img src="https://img.shields.io/badge/license-MIT-blue.svg" alt="MIT License"/></a>
+					<img src="https://img.shields.io/github/downloads/akashnag/ash/total" alt="Downloads"/>
+					<img src="https://img.shields.io/github/size/akashnag/ash/dist/ash-editor-0.1.0.dev4.tar.gz" alt="Size"/>
+					<img src="https://sloc.xyz/github/akashnag/ash" alt="SLOC"/>
+				</p>
 				<p><strong>ash</strong> is a simple and clean terminal-based text editor, that aims to be easy to use with modern key-bindings. It is capable of handling multiple files simultaneously and has a wide array of modern features. Here is a picture of <strong>ash</strong> editing this README file:</p>
 				<p><img src="./assets/ash-default.png" alt="Screenshot"></p>
 				<p><strong>ash</strong> is written in Python 3.8 using the curses library.</p>
