Bug-fixes; improved mouse support; added popup-menu

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 					<li>Syntax highlighting (limited)</li>
 					<li>Git integration (shows untracked, modified files, etc.)</li>
 					<li>Command palette</li>
+					<li>Basic mouse support</li>
 				</ul>
 
 				<h2><a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
