--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
 				</ul>
 			
 				<hr/>
+
+				<p><strong>
+					Note: The latest version is always the nightly build and the information 
+					presented here always refers to that build only. Unless you have any 
+					specific reason not to, you should always download the nightly build to 
+					get the latest features/updates/bug-fixes.
+				</strong></p>
+
 				<h2><a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 				<p>The following is a list of features available in <strong>ash</strong> (Note: all these features are available in the nightly build but may not be available in the stable release):</p>
 				
