Added support for multiple cursors

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 					<li>View list of recent files, view project explorer (in project mode)</li>
 					<li>Syntax highlighting (limited)</li>
 					<li>Git integration (shows untracked, modified files, etc.)</li>
+					<li>Multiple Cursors</li>
 					<li>Command palette</li>
 					<li>Basic mouse support</li>
 				</ul>
