--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 				<p>You need certain packages and Python 3 itself to download and run ash:</p>
 				<div class="highlight highlight-source-shell">
 <pre>
+$ sudo apt install git
 $ sudo apt install xclip
 $ sudo apt install python3
 $ sudo apt install python3-pip
