Fixed error on mouse-click at empty-space; and other changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -110,7 +110,7 @@
 				<p>For Linux users, follow these steps to get <strong>ash</strong> on your system:</p>
 
 				<h3><a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Prerequisites</h3>
-				<p>You need certain packages and Python 3 itself to download and run ash:</p>
+				<p>You need certain packages and Python 3 itself to download and run ash. Instructions for Ubuntu:</p>
 				<div class="highlight highlight-source-shell">
 <pre>
 $ sudo apt install git
