--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 					<li>Support for remapping key bindings to your taste</li>
 					<li>Common editor features such as undo/redo, line numbers, find-replace, cut-copy-paste, etc.</li>
 					<li>True support for wrapping (both hard & soft) with intuitive cursor movements along wrapped text</li>
+					<li>Multi-file editing with support for windows and tabs</li>
 					<li>Auto-backup</li>
 					<li>Support for Unicode</li>
 					<li>Project mode (opening a directory instead of individual files)</li>
