--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				<ul>
 					<li><a href="#features">Features</a></li>
-					<li><a href="RELEASE_NOTES.md">Release Notes</a></li>
+					<li><a href="https://github.com/akashnag/ash/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
 					<li>
 						<a href="#installation">Installation</a>
 						<ul>
@@ -65,7 +65,7 @@
 							<li><a href="#uninstalling-ash">Uninstalling ash</a></li>
 						</ul>
 					</li>
-					<li><a href="CUSTOMIZATION.md">Customization</a></li>
+					<li><a href="https://github.com/akashnag/ash/blob/master/CUSTOMIZATION.md">Customization</a></li>
 					<li><a href="#usage">Usage</a></li>
 					<li><a href="#contributing">Contributing</a></li>
 					<li><a href="#screenshots">Screenshots</a></li>
