Relicensed under GPL-2.0

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!-- SPDX-License-Identifier: GPL-2.0-only -->
 <!--
-	Copyright (c) Akash Nag. All rights reserved.
-	Licensed under the MIT License. See LICENSE.md in the project root for license information.
+/index.html
+
+Copyright (C) 2022-2022  Akash Nag
 -->
 
 <!DOCTYPE HTML>
@@ -44,7 +46,7 @@
 			<section>
 				<p><img src="./assets/banner.png" alt="ash banner"></p>
 				<p>
-					<a href="https://github.com/akashnag/ash/blob/master/LICENSE.md"><img src="https://img.shields.io/badge/license-MIT-blue.svg" alt="MIT License"/></a>
+					<a href="https://github.com/akashnag/ash/blob/master/LICENSE.txt"><img src="https://img.shields.io/badge/license-GPL_2.0-blue.svg" alt="GPL-2.0 License"/></a>
 					<img src="https://img.shields.io/github/downloads/akashnag/ash/total" alt="Downloads"/>
 					<img src="https://img.shields.io/github/size/akashnag/ash/dist/ash-editor-0.1.0.dev14.tar.gz" alt="Size"/>
 					<img src="https://sloc.xyz/github/akashnag/ash" alt="SLOC"/>
@@ -224,8 +226,8 @@ $ sudo pip3 uninstall ash-editor
 				</p>
 
 				<h2><a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
-				<p>Copyright © Akash Nag. All rights reserved.</p>
-				<p>Licensed under the <a href="LICENSE.md">MIT</a> license.</p>
+				<p>Copyright © 2020-2022 Akash Nag. All rights reserved.</p>
+				<p>Licensed under the <a href="LICENSE.txt">GPL-2.0</a> license.</p>
       		</section>
 	  
 			<footer>
